* client/views/InboxPane/InboxPane.css: CSS fix for inbox not being visible

--- a/client/views/InboxPane/InboxPane.css
+++ b/client/views/InboxPane/InboxPane.css
@@ -10,10 +10,11 @@ ul.ShiftListView li.ShiftListViewCell div.messageMeta
 
 #MessagesListViewContainer
 {
+   top: 0px;
+   left: 0px;
+   right: 0px;
    bottom: 0px;
    position: absolute;
-   right: 0px;
-   height: 100%;
    overflow-y: auto;
 }
 
